<resources>
    <string name="app_name">tendable</string>
    <string name="email">Email</string>
    <string name="email_icon">email icon</string>
    <string name="password">Password</string>
    <string name="lock_icon">lock icon</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="dashboard">Dashboard</string>
    <string name="start_inspection">Start Inspection</string>
</resources>